examples/errors/parse1.stlc
a : Integer
a = 5

a
